# malprogramm

./: .gitignore  CMakeLists.txt  LICENSE  canvas.cpp  canvas.h  data.cpp  data.h  genresheader.py  images.h  main.cpp  main.h  shapefactory.cpp  shapefactory.h  shapes.cpp  shapes.h  window.cpp  window.h  zngx.xsd
resources/: b.rc
